//proto 2 optional need to mention in proto 3 all fields are optional default.

syntax = "proto3";

package questions;

// Define the request message for fetching questions
message FetchQuestionsRequest {
  string title = 1;
  int32 page = 2;
  int32 limit = 3;
  string type = 4;
  string anagramType = 5;
}


// Define the Question message
message Question {
  string _id = 1;              // Question ID
  string type = 2;             // Type of the question (e.g., CONTENT_ONLY, MCQ, etc.)
  string title = 3;            // Question title
  string siblingId = 4;        // ID of the sibling question
  repeated Option options = 5; // List of options (if applicable)
  repeated Block blocks = 6;   // List of blocks (if applicable)
  string anagramType = 7;      // Anagram type (if applicable, e.g., SENTENCE)
  string solution = 8;         // Solution (if applicable for ANAGRAM)
}

message Option{
    string _id = 1;
    string text = 2;
    bool isCorrectAnswere = 3; 

}

message Block{
    string _id = 1;
    string text  = 2;
    bool showInOption = 3;
    bool isAnswere = 4;
}

// Define the response message for the fetched questions
message FetchQuestionsResponse {
  int32 currentPage = 1;
  int32 totalPages = 2;
  repeated Question questions = 3;
}



// Define the QuestionService
service QuestionService {
  rpc FetchQuestions (FetchQuestionsRequest) returns (FetchQuestionsResponse);
}



service PingPongService {
  rpc PingPong(PingRequest) returns (stream PongResponse) {} 
}

message PingRequest {}

message PongResponse { 
  string message = 1;
}
